--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -15,15 +15,15 @@
         color: #fff;
         border: none;
         border-radius: 0.5vw;
-        padding: 1vh 1vw;
+        padding: 0.91vh 4.193vw;
     }
 }
 
 .integration-item {
     margin: 1.5vh 0;
     /* max-width: 22vw; */
-    border: 0.15vw solid #999;
-    padding: 1.2vw;
+    border: 0.07vw solid #424242;
+    padding: 1.042vw;
     border-radius: 1vw;
     background: #fff;
     box-shadow: 0vw 0.4vh 0.8vh rgba(0, 0, 0, 0.1);
@@ -41,7 +41,7 @@
 }
 
 .img-btn img {
-    width: 3.6vw;
+    width: 3.516vw;
     height: auto;
     border-radius: 1vw;
 }
@@ -77,7 +77,7 @@
     bottom: 0;
     background-color: #ccc;
     transition: background-color 0.3s ease;
-    border-radius: 2vw;
+    border-radius: 4vw;
 }
 
 .slider:before {
@@ -93,31 +93,45 @@
 }
 
 .integrations-head {
-    font-size: 1.1vw;
+    font-size: 0.92vw;
     color: #000;
     font-weight: 600;
-    margin-top: 1vh;
+    margin: 1vh 0 0;
 }
 
-.integration-item p {
+.integrations-text {
     color: #666;
-    font-size: 1vw;
+    font-size: 0.912vw;
     line-height: 1.4;
     margin: 0.5vh 0vw;
 }
 
 @media screen and (max-width:768px) {
+    .integration-item {
+        padding: 4.042vw;
+        border-radius: 3vw;
+    }
     .toggle-switch {
-        width: 38px;
-        height: 20px;
+        width: 48px;
+        height: 26px;
     }
 
-    .slider{
+    .slider {
         top: 1vh;
     }
 
-    .slider:before{
-        width: 10px;
-        height: 10px;
+    .slider:before {
+        width: 15px;
+        height: 15px;
+        top: 2px;
+        left: 2px;
+    }
+
+    .toggle-switch input:checked+.slider:before {
+        transform: translateX(5vw);
+    }
+
+    .img-btn img {
+        width: 12.76vw;
     }
 }
