--- a/src/Components/component.css
+++ b/src/Components/component.css
@@ -15,7 +15,7 @@
         color: #fff;
         border: none;
         border-radius: 0.5vw;
-        padding: 0.91vh 4.193vw;
+        padding: 0.91vh 1.193vw;
     }
 }
 
@@ -133,5 +133,9 @@
 
     .img-btn img {
         width: 12.76vw;
+    }
+
+    button {
+        padding: 0.91vh 4.193vw;
     }
 }
